Fix responsive and multiplication

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <button class="botao" onclick="insert('/')">/</button>
                     </td>
                     <td>
-                        <button class="botao" onclick="insert('X')">X</button>
+                        <button class="botao" onclick="insert('*')">x</button>
                     </td>
                 </tr>
                 <tr>
